# website

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  nginx.conf  pelicanconf.py  publishconf.py  pyproject.toml
content/: blog_revamp.md  concurrent_sqlite.md  dumbdict.md  faster_decompression.md  generational-arena-dom.md  pybay2017.md  pybay2019.md  restart_again.md  rust_miscompilation.md  rust_tools_apt.md  therealme.md  typycal.md
content/pages/about/: contact.md  me.md
content/static/: CNAME
content/static/.well-known/: webfinger
